--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
 		"format": "prettier --write ."
 	},
 	"dependencies": {
+		"@emotion/react": "^11.14.0",
+		"@emotion/styled": "^11.14.1",
+		"@fontsource/roboto": "^5.2.6",
+		"@mui/icons-material": "^7.3.1",
+		"@mui/material": "^7.3.1",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0"
 	},
